--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <% include ./partials/boilerplate %>
 
-<h1><%= title %></h1>
-<a href='/tasks'>See your tasks</a>
-
+<h1>Welcome to my</h1>
+<h1><%=title %> app</h1>
+<div id="welcome-link">
+  <a href='/tasks'>Todos</a>
+</div>
 <% include ./partials/end %>
