--- a/views/tasks/tasks-edit.ejs
+++ b/views/tasks/tasks-edit.ejs
@@ -2,7 +2,7 @@
 
 <form action="/taskss/<%= task.id %>?_method=PUT" method="POST">
   <input type="text" name="title" value="<%= task.title %>" />
-  <input type="number" name="status" value="<%= task.status %>" />
+  <input type="text" name="status" value="<%= task.status %>" />
   <input type="text" name="category" value="<%= task.category %>" />
   <input type="text" name="description" value="<%= task.description %>" />
   <input type="submit" value="Update Task" />
